--- a/ChestsAnywhere/i18n/zh.json
+++ b/ChestsAnywhere/i18n/zh.json
@@ -68,7 +68,7 @@
     /****
     ** remote access
     ****/
-    "config.title.remote-access": "Remote access", // TODO
+    "config.title.remote-access": "远程访问",
 
     "config.range.name": "箱子显示范围",
     "config.range.desc": "箱子可通过菜单访问的范围。",
@@ -86,16 +86,16 @@
     /****
     ** open menu hotkey
     ****/
-    "config.title.open-menu-hotkey": "Hotkey to open chest UI", // TODO
+    "config.title.open-menu-hotkey": "箱子菜单快捷键",
 
     "config.toggle-ui-key.name": "切换UI",
     "config.toggle-ui-key.desc": "显示或隐藏箱子UI的按键",
 
-    "config.reopen-last-chest.name": "Reopen last chest", // TODO
-    "config.reopen-last-chest.desc": "When you press the 'toggle UI' button, whether to reopen the last chest you selected yourself during the current game session.", // TODO
+    "config.reopen-last-chest.name": "默认打开上个箱子",
+    "config.reopen-last-chest.desc": "按‘切换UI’快捷键时，打开上个查看的箱子",
 
-    "config.default-category.name": "Default category", // TODO
-    "config.default-category.desc": "When you press the 'toggle UI' button, show the chests in this category by default (if set). This applies after 'reopen last chest'.", // TODO
+    "config.default-category.name": "默认分类",
+    "config.default-category.desc": "W按‘切换UI’快捷键时，优先显示此分类的箱子。此设定在‘默认打开上个箱子’之后起效",
 
     /****
     ** controls when chest UI is open
