--- a/CropsAnytimeAnywhere/i18n/zh.json
+++ b/CropsAnytimeAnywhere/i18n/zh.json
@@ -12,9 +12,8 @@
     "config.grow-crops-out-of-season.name": "随时种植作物",
     "config.grow-crops-out-of-season.desc": "作物是否可以在任何季节种植和生产。只有当“随处种植作物”启用时，该选项才会生效。",
 
-    // TODO
-    "config.use-fruit-trees-seasonal-sprites.name": "Seasonal fruit trees sprites",
-    "config.use-fruit-trees-seasonal-sprites.desc": "Whether fruit trees should use their normal seasonal sprite (true) or their summer sprites (false) when 'grow crops in any season' is enabled.",
+    "config.use-fruit-trees-seasonal-sprites.name": "季节性果树外观",
+    "config.use-fruit-trees-seasonal-sprites.desc": "‘随时种植作物’开启时，控制果树是否使用季节外观。不启用时默认显示夏季外观。",
 
     "config.force-till-dirt.name": "耕种所有土地瓦片",
     "config.force-till-dirt.desc": "是否所有的土地瓦片都可以用锄头耕种，即使它们正常不能耕种。",
